skiplang/compiler/invalid_tests/typechecking/tracked_lambda_calls_untracked.sk
// it's an error for a tracked lambda body to call an untracked function
untracked fun f(): String {
  "Fail\n"
}

fun main(): void {
  g = () -> f();
  print_raw(g())
}
